--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 					<a class="nav-link" href="#">Hire Me</a>
 				</li>
 			</ul>
-			<p>© 2019 Amadou Fall. All rights reserved.</p>
+			<p class="pb-5">© 2019 Amadou Fall. All rights reserved.</p>
 		</footer>
 	</div>
 
