--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</div>
 			<div class="col-md-6">
 				<h1 class="display-3" id="am">I'm Amadou</h1>
-				<p>A shitty Web Developer</p>		
+				<p class="ashitty">A shitty Web Developer</p>		
 			</div>
 			<div class="col-3" id="nuage-2">
 					<img src="could.png" alt="" width="160" height="50">
