--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<header>
 		<div class="container mt-md-5">
-			<nav class="navbar navbar-expand-md" id="MainNav">
+			<nav class="navbar navbar-expand-md " id="MainNav">
 				<img src="Black-boy.png" class="ml-md-5" width="50" height="50" alt="">
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navco">
 					<!-- <i class="fas fa-bars"></i> -->
@@ -25,7 +25,7 @@
 							<a class="nav-link mr-md-5" href="#">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link mr-md-5" href="#">Work</a>
+							<a class="nav-link mr-md-5" href="work.html">Work</a>
 						</li>
 						<li class="nav-item">
 								<a class="nav-link" href="#">Notes</a>
@@ -116,7 +116,7 @@
 						<div class="simple2">
 							<p>If you have a project that you want to get started, 
 							think you need my help with something or just fancy saying hey, then get in touch.</p>
-							<button type="button" class="btn btn-primary btn-lg mt-3"><i class="fas fa-envelope"></i> MESSAGE ME</button>
+							<button type="button" class="btn message btn-lg mt-3"><i class="fas fa-envelope"></i> MESSAGE ME</button>
 						</div>
 					</div>
 				</div>
@@ -146,6 +146,5 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	
 </body>
 </html>
