--- a/work.html
+++ b/work.html
@@ -41,7 +41,7 @@
 				<img src="could.png" alt="" width="160" height="50">
 				
 			</div>
-			<div class="col-md-6 work">
+			<div class="col-md-6 work shot">
 				<img src="work.svg" alt="">
 			</div>
 			<div class="col-3" id="nuage-2">
