--- a/work.html
+++ b/work.html
@@ -22,13 +22,13 @@
 				<div class="collapse navbar-collapse mr-md-5" id="Navco">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
-							<a class="nav-link mr-md-5" href="#">About</a>
+							<a class="nav-link mr-md-5" href="index.html">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link mr-md-5" href="#">Work</a>
+							<a class="nav-link mr-md-5" href="work.html">Work</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Notes</a>
+							<a class="nav-link" href="Notes.html">Notes</a>
 						</li>
 					</ul>
 				</div>
